platform/keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak

spec:
  replicas: 2
  revisionHistoryLimit: 2

  selector:
    matchLabels:
      app: keycloak

  template:
    metadata:
      labels:
        app: keycloak

    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0

          # ✅ SEM optimized (evita bug com ENV)
          args: ["start"]

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 50
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 10

          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 80
            timeoutSeconds: 5
            periodSeconds: 10
